<resources>
    <string name="app_name">test3</string>
    <string name="LoadLayer">加载图层</string>
    <string name="ScaleBar">比例尺</string>
    <string name="Rotate">旋转</string>
    <string name="ZoomDown">缩小</string>
    <string name="ZoomUp">放大</string>
    <string name="DeleteLayer">删除图层</string>
    <string name="ManageLayers">图层管理</string>
    <string name="LayerNames">图层信息</string>
    <string name="CancelSelect">取消选择</string>
    <string name="up">up</string>
    <string name="left">left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="FullScreen">全屏</string>
    <string name="CancelFullScreen">取消全屏</string>
    <string name="ok">OK</string>
    <string name="search">search</string>
    <string name="clear">clear</string>
</resources>
