<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutLine0"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btnZoomUp"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ZoomUp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnZoomDown"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ZoomDown"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnRotate"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/Rotate"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnScaleBar"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/ScaleBar"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="240dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btnClear"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/btnSearch"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/search"/>
        </LinearLayout>
        <com.esri.arcgisruntime.mapping.view.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>